--- a/public/test2.html
+++ b/public/test2.html
@@ -131,14 +131,14 @@
   
               <div x-show="open" @click.outside="open = false"
                 class="absolute right-0 mt-2 w-48 rounded-md shadow bg-white text-sm text-gray-700 z-50">
-                <a href="#" onclick="setLanguage('en|en')" class="block px-4 py-2 hover:bg-gray-100">🇬🇧 English</a>
-                <a href="#" onclick="setLanguage('en|fr')" class="block px-4 py-2 hover:bg-gray-100">🇫🇷 Français</a>
-                <a href="#" onclick="setLanguage('en|es')" class="block px-4 py-2 hover:bg-gray-100">🇪🇸 Español</a>
-                <a href="#" onclick="setLanguage('en|de')" class="block px-4 py-2 hover:bg-gray-100">🇩🇪 Deutsch</a>
-                <a href="#" onclick="setLanguage('en|it')" class="block px-4 py-2 hover:bg-gray-100">🇮🇹 Italiano</a>
-                <a href="#" onclick="setLanguage('en|nl')" class="block px-4 py-2 hover:bg-gray-100">🇳🇱 Nederlands</a>
-                <a href="#" onclick="setLanguage('en|sv')" class="block px-4 py-2 hover:bg-gray-100">🇸🇪 Svenska</a>
-                <a href="#" onclick="setLanguage('en|el')" class="block px-4 py-2 hover:bg-gray-100">🇬🇷 Ελληνικά</a>
+                <a href="#" onclick="event.preventDefault(); setLanguage('en')" class="block px-4 py-2 hover:bg-gray-100">🇬🇧 English</a>
+                <a href="#" onclick="event.preventDefault(); setLanguage('fr')" class="block px-4 py-2 hover:bg-gray-100">🇫🇷 Français</a>
+                <a href="#" onclick="event.preventDefault(); setLanguage('es')" class="block px-4 py-2 hover:bg-gray-100">🇪🇸 Español</a>
+                <a href="#" onclick="event.preventDefault(); setLanguage('de')" class="block px-4 py-2 hover:bg-gray-100">🇩🇪 Deutsch</a>
+                <a href="#" onclick="event.preventDefault(); setLanguage('it')" class="block px-4 py-2 hover:bg-gray-100">🇮🇹 Italiano</a>
+                <a href="#" onclick="event.preventDefault(); setLanguage('nl')" class="block px-4 py-2 hover:bg-gray-100">🇳🇱 Nederlands</a>
+                <a href="#" onclick="event.preventDefault(); setLanguage('sv')" class="block px-4 py-2 hover:bg-gray-100">🇸🇪 Svenska</a>
+                <a href="#" onclick="event.preventDefault(); setLanguage('el')" class="block px-4 py-2 hover:bg-gray-100">🇬🇷 Ελληνικά</a>
               </div>
             </div>
           </div>
@@ -146,26 +146,29 @@
       </div>
     </header>
   
-    <!-- Google Translate Function -->
+    <!-- Google Translate Functions -->
     <script>
-      function setLanguage(langPair) {
-        const lang = langPair.split('|')[1];
-        document.cookie = `googtrans=/en/${lang}; path=/`;
-        document.cookie = `googtrans=/en/${lang}; domain=${location.hostname}; path=/`;
+      function setLanguage(lang) {
+        const cookieValue = `/en/${lang}`;
+        document.cookie = `googtrans=${cookieValue}; path=/;`;
+        document.cookie = `googtrans=${cookieValue}; domain=${location.hostname}; path=/;`;
   
-        const select = document.querySelector("select.goog-te-combo");
-        if (select) {
-          select.value = lang;
-          select.dispatchEvent(new Event("change"));
-        }
+        const interval = setInterval(() => {
+          const select = document.querySelector("select.goog-te-combo");
+          if (select) {
+            select.value = lang;
+            select.dispatchEvent(new Event("change"));
+            clearInterval(interval);
+          }
+        }, 500);
       }
   
-      // Hide the Google banner & reset body offset
+      // Hide Google Translate banner
       document.addEventListener("DOMContentLoaded", function () {
-        const observer = new MutationObserver(function () {
-          const gtFrame = document.querySelector('iframe.goog-te-banner-frame');
-          if (gtFrame) gtFrame.style.display = 'none';
-          document.body.style.top = '0px';
+        const observer = new MutationObserver(() => {
+          const frame = document.querySelector("iframe.goog-te-banner-frame");
+          if (frame) frame.style.display = "none";
+          document.body.style.top = "0px";
         });
         observer.observe(document.body, { childList: true, subtree: true });
       });
