--- a/public/test2.html
+++ b/public/test2.html
@@ -111,12 +111,10 @@
   <body class="bg-gray-50 text-gray-800">
     <div id="google_translate_element2" style="display: none;"></div>
   
-    <!-- Header & Dropdown -->
+    <!-- Header & Language Dropdown -->
     <header class="bg-white shadow">
       <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-        <a href="/">
-          <img src="images/quaerens-logo.png" alt="Quaerens Logo" class="h-20 w-auto">
-        </a>
+        <a href="/"><img src="images/quaerens-logo.png" alt="Quaerens Logo" class="h-20 w-auto"></a>
         <nav>
           <div class="w-full bg-gray-100 text-right p-2">
             <div x-data="{ open: false }" class="relative inline-block text-left">
@@ -132,13 +130,9 @@
               <div x-show="open" @click.outside="open = false"
                 class="absolute right-0 mt-2 w-48 rounded-md shadow bg-white text-sm text-gray-700 z-50">
                 <a href="#" @click.prevent="setLanguage('en'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇬🇧 English</a>
-                <a href="#" @click.prevent="setLanguage('fr'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇫🇷 Français</a>
                 <a href="#" @click.prevent="setLanguage('es'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇪🇸 Español</a>
+                <a href="#" @click.prevent="setLanguage('fr'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇫🇷 Français</a>
                 <a href="#" @click.prevent="setLanguage('de'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇩🇪 Deutsch</a>
-                <a href="#" @click.prevent="setLanguage('it'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇮🇹 Italiano</a>
-                <a href="#" @click.prevent="setLanguage('nl'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇳🇱 Nederlands</a>
-                <a href="#" @click.prevent="setLanguage('sv'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇸🇪 Svenska</a>
-                <a href="#" @click.prevent="setLanguage('el'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇬🇷 Ελληνικά</a>
               </div>
             </div>
           </div>
@@ -146,7 +140,7 @@
       </div>
     </header>
   
-    <!-- Google Translate Script -->
+    <!-- Google Translate Setup -->
     <script>
       function setLanguage(lang) {
         const cookieVal = `/en/${lang}`;
@@ -155,7 +149,7 @@
   
         const interval = setInterval(() => {
           const select = document.querySelector("select.goog-te-combo");
-          if (select) {
+          if (select && select.options.length > 1) {
             select.value = lang;
             select.dispatchEvent(new Event("change"));
             clearInterval(interval);
@@ -163,27 +157,28 @@
         }, 300);
       }
   
-      // Hide the Google Translate banner
+      // Hide Google Translate banner
       document.addEventListener("DOMContentLoaded", function () {
         const observer = new MutationObserver(function () {
-          const gtFrame = document.querySelector('iframe.goog-te-banner-frame');
-          if (gtFrame) gtFrame.style.display = 'none';
+          const frame = document.querySelector('iframe.goog-te-banner-frame');
+          if (frame) frame.style.display = 'none';
           document.body.style.top = '0px';
         });
         observer.observe(document.body, { childList: true, subtree: true });
       });
   
+      // Initialize Google Translate
       function googleTranslateElementInit2() {
         new google.translate.TranslateElement({
           pageLanguage: 'en',
-          includedLanguages: 'en,fr,es,de,nl,it,sv,el',
+          includedLanguages: 'en,es,fr,de,nl,it,sv,el',
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
           autoDisplay: false
         }, 'google_translate_element2');
       }
     </script>
   
-    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
   </body>
   </html>  
 
