--- a/public/test2.html
+++ b/public/test2.html
@@ -7,8 +7,6 @@
   <title>Exitmytimeshares.com | Quaerens</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- ✅ Add Alpine.js here -->
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 
   <style>
@@ -17,21 +15,11 @@
       top: 0px !important;
       position: static !important;
     }
-  
+
     html {
       margin-top: 0 !important;
     }
-  
-    .content-box {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 2rem;
-      background: #f9fafb;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-    }
-  
-    /* ✅ HIDE the Google Translate top banner */
+
     .goog-te-banner-frame.skiptranslate,
     .goog-te-gadget-icon,
     .goog-logo-link,
@@ -39,17 +27,17 @@
     body > .skiptranslate {
       display: none !important;
     }
-  
+
     .goog-te-gadget {
       font-size: 0 !important;
     }
-  
+
     form label {
       display: block;
       margin-top: 1rem;
       font-weight: 600;
     }
-  
+
     form input,
     form select {
       width: 100%;
@@ -58,150 +46,119 @@
       border-radius: 6px;
       margin-top: 0.5rem;
     }
-  </style>  
-  
-<script>
-  function setLanguage(langPair) {
-    if (!langPair) return;
-    const lang = langPair.split('|')[1];
-    const newLang = '/en/' + lang;
-    document.cookie = 'googtrans=' + newLang + '; path=/';
-    document.cookie = 'googtrans=' + newLang + '; domain=' + window.location.hostname + '; path=/';
-    location.reload();
-  }
-</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <!-- Auto-detect language based on IP -->
+  <script>
+    if (!document.cookie.includes("googtrans")) {
+      fetch("https://ipapi.co/json/")
+        .then(response => response.json())
+        .then(data => {
+          const countryLangMap = {
+            FR: "fr", ES: "es", DE: "de", IT: "it",
+            NL: "nl", SE: "sv", GR: "el", DEFAULT: "en"
+          };
+          const lang = countryLangMap[data.country_code] || countryLangMap.DEFAULT;
+          const cookieValue = "/en/" + lang;
+          document.cookie = `googtrans=${cookieValue}; path=/`;
+          document.cookie = `googtrans=${cookieValue}; domain=${location.hostname}; path=/`;
+          location.reload();
+        });
+    }
+  </script>
+</head>
 
-<!-- Auto-detect language based on IP (only on first visit) -->
-<script>
-  if (!document.cookie.includes("googtrans")) {
-    fetch("https://ipapi.co/json/")
-      .then(response => response.json())
-      .then(data => {
-        const country = data.country_code;
+<body class="bg-gray-50 text-gray-800">
+  <div id="google_translate_element2" style="display: none;"></div>
 
-        const countryLangMap = {
-          FR: "fr",
-          ES: "es",
-          DE: "de",
-          IT: "it",
-          NL: "nl",
-          SE: "sv",
-          GR: "el",
-          DEFAULT: "en"
-        };
-
-        const lang = countryLangMap[country] || countryLangMap.DEFAULT;
-        const cookieValue = "/en/" + lang;
-
-        document.cookie = `googtrans=${cookieValue}; path=/`;
-        document.cookie = `googtrans=${cookieValue}; domain=${location.hostname}; path=/`;
-
-        location.reload();
-      })
-      .catch(error => {
-        console.error("IP geolocation failed:", error);
-      });
-  }
-</script>
-  </head>
-
-  <body class="bg-gray-50 text-gray-800">
-    <div id="google_translate_element2" style="display: none;"></div>
-  
-    <!-- Header & Language Dropdown -->
-    <header class="bg-white shadow">
-      <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-        <a href="/"><img src="images/quaerens-logo.png" alt="Quaerens Logo" class="h-20 w-auto"></a>
-        <nav>
-          <div class="w-full bg-gray-100 text-right p-2">
-            <div x-data="{ open: false }" class="relative inline-block text-left">
-              <button @click="open = !open"
-                class="inline-flex items-center justify-center rounded border border-gray-300 px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-100 focus:outline-none">
-                🌐 Language
-                <svg class="ml-2 h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8l5 5 5-5" />
-                </svg>
-              </button>
-  
-              <div x-show="open" @click.outside="open = false"
-                class="absolute right-0 mt-2 w-48 rounded-md shadow bg-white text-sm text-gray-700 z-50">
-                <a href="#" @click.prevent="setLanguage('en'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇬🇧 English</a>
-                <a href="#" @click.prevent="setLanguage('es'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇪🇸 Español</a>
-                <a href="#" @click.prevent="setLanguage('fr'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇫🇷 Français</a>
-                <a href="#" @click.prevent="setLanguage('de'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇩🇪 Deutsch</a>
-                <a href="#" @click.prevent="setLanguage('de'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇮🇹 Italiano</a>
-                <a href="#" @click.prevent="setLanguage('de'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇳🇱 Nederlands</a>
-                <a href="#" @click.prevent="setLanguage('de'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇸🇪 Svenska</a>
-                <a href="#" @click.prevent="setLanguage('de'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇬🇷 Ελληνικά</a>
-              </div>
+  <!-- Header -->
+  <header class="bg-white shadow">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+      <a href="/"><img src="images/quaerens-logo.png" alt="Quaerens Logo" class="h-20 w-auto"></a>
+      <nav>
+        <div class="w-full bg-gray-100 text-right p-2">
+          <div x-data="{ open: false }" class="relative inline-block text-left">
+            <button @click="open = !open"
+              class="inline-flex items-center justify-center rounded border border-gray-300 px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-100 focus:outline-none">
+              🌐 Language
+              <svg class="ml-2 h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8l5 5 5-5" />
+              </svg>
+            </button>
+            <div x-show="open" @click.outside="open = false"
+              class="absolute right-0 mt-2 w-48 rounded-md shadow bg-white text-sm text-gray-700 z-50">
+              <a href="#" @click.prevent="setLanguage('en'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇬🇧 English</a>
+              <a href="#" @click.prevent="setLanguage('es'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇪🇸 Español</a>
+              <a href="#" @click.prevent="setLanguage('fr'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇫🇷 Français</a>
+              <a href="#" @click.prevent="setLanguage('de'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇩🇪 Deutsch</a>
+              <a href="#" @click.prevent="setLanguage('it'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇮🇹 Italiano</a>
+              <a href="#" @click.prevent="setLanguage('nl'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇳🇱 Nederlands</a>
+              <a href="#" @click.prevent="setLanguage('sv'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇸🇪 Svenska</a>
+              <a href="#" @click.prevent="setLanguage('el'); open = false" class="block px-4 py-2 hover:bg-gray-100">🇬🇷 Ελληνικά</a>
             </div>
           </div>
-        </nav>
-      </div>
-    </header>
-  
-    <script>
-        function setLanguage(lang) {
-          const cookieVal = `/en/${lang}`;
-          document.cookie = `googtrans=${cookieVal}; path=/;`;
-          document.cookie = `googtrans=${cookieVal}; domain=${location.hostname}; path=/;`;
-  
-          const interval = setInterval(() => {
-            const select = document.querySelector("select.goog-te-combo");
-            if (select) {
-              select.value = lang;
-              select.dispatchEvent(new Event("change"));
-              clearInterval(interval);
-            }
-          }, 300);
-        }
-      </script>
+        </div>
+      </nav>
+    </div>
+  </header>
 
-    <!-- Google Translate Setup -->
-    <script>
-      function setLanguage(lang) {
-        const cookieVal = `/en/${lang}`;
-        document.cookie = `googtrans=${cookieVal}; path=/;`;
-        document.cookie = `googtrans=${cookieVal}; domain=${location.hostname}; path=/;`;
-  
-        const interval = setInterval(() => {
-          const select = document.querySelector("select.goog-te-combo");
-          if (select && select.options.length > 1) {
-            select.value = lang;
-            select.dispatchEvent(new Event("change"));
-            clearInterval(interval);
-          }
-        }, 300);
-      }
-  
-      // Hide Google Translate banner
-      document.addEventListener("DOMContentLoaded", function () {
-        const observer = new MutationObserver(function () {
-          const frame = document.querySelector('iframe.goog-te-banner-frame');
-          if (frame) frame.style.display = 'none';
-          document.body.style.top = '0px';
-        });
-        observer.observe(document.body, { childList: true, subtree: true });
+  <!-- Optional: Translate status for debugging -->
+  <div id="translate-status" class="text-xs text-gray-500 px-4 py-2 text-right max-w-7xl mx-auto">
+    ⏳ Loading Google Translate...
+  </div>
+
+  <!-- Google Translate Logic -->
+  <script>
+    function setLanguage(lang) {
+      const cookieVal = `/en/${lang}`;
+      document.cookie = `googtrans=${cookieVal}; path=/;`;
+      document.cookie = `googtrans=${cookieVal}; domain=${location.hostname}; path=/;`;
+
+      const interval = setInterval(() => {
+        const select = document.querySelector("select.goog-te-combo");
+        if (select && select.options.length > 1) {
+          select.value = lang;
+          select.dispatchEvent(new Event("change"));
+          clearInterval(interval);
+        }
+      }, 300);
+    }
+
+    // Hide Google banner
+    document.addEventListener("DOMContentLoaded", function () {
+      const observer = new MutationObserver(function () {
+        const frame = document.querySelector('iframe.goog-te-banner-frame');
+        if (frame) frame.style.display = 'none';
+        document.body.style.top = '0px';
       });
-  
-      // Initialize Google Translate
-      function googleTranslateElementInit2() {
-        new google.translate.TranslateElement({
-          pageLanguage: 'en',
-          includedLanguages: 'en,es,fr,de,nl,it,sv,el',
-          layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-          autoDisplay: false
-        }, 'google_translate_element2');
-      }
-    </script>
-  
-    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
-  </body>
-  </html>  
+      observer.observe(document.body, { childList: true, subtree: true });
+
+      // Debug status
+      const statusBox = document.getElementById("translate-status");
+      const monitor = setInterval(() => {
+        const select = document.querySelector("select.goog-te-combo");
+        if (select) {
+          statusBox.textContent = "✅ Google Translate ready";
+          clearInterval(monitor);
+        } else {
+          statusBox.textContent = "⏳ Waiting for Google Translate...";
+        }
+      }, 500);
+    });
+
+    function googleTranslateElementInit2() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'en,es,fr,de,nl,it,sv,el',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+        autoDisplay: false
+      }, 'google_translate_element2');
+    }
+  </script>
+
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
+</body>
+</html>
 
 <!-- Hero Section -->
 <section class="relative w-full overflow-hidden">
