--- a/public/test3.html
+++ b/public/test3.html
@@ -61,35 +61,22 @@
       }, 300);
     }
   </script>
-
-  <!-- Google Translate Init -->
-  <script type="text/javascript">
-    function googleTranslateElementInit2() {
+  
+  <!-- Load Translate Widget -->
+  <script>
+    window.googleTranslateElementInit2 = function () {
       new google.translate.TranslateElement({
         pageLanguage: 'en',
         includedLanguages: 'en,es,fr,de,nl,it,sv,el',
         layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
         autoDisplay: false
       }, 'google_translate_element2');
-    }
+    };
+  
+    const script = document.createElement('script');
+    script.src = 'https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2';
+    document.body.appendChild(script);
   </script>
-
-  <!-- Load Translate Widget -->
-  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
-
-  <!-- Status Monitor -->
-  <script>
-    const statusBox = document.getElementById("translate-status");
-    const monitor = setInterval(() => {
-      const select = document.querySelector("select.goog-te-combo");
-      if (select) {
-        statusBox.textContent = "✅ Google Translate ready";
-        clearInterval(monitor);
-      } else {
-        statusBox.textContent = "⏳ Waiting for Google Translate...";
-      }
-    }, 500);
-  </script>
-
+  
 </body>
 </html>
