--- a/public/test3.html
+++ b/public/test3.html
@@ -168,7 +168,7 @@
       autoDisplay: false
     }, 'google_translate_element2');
   }
-  
+
 </script>
     <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
   </body>
@@ -749,10 +749,12 @@
     }
   </script>
   
-  <!-- init Google Translate (hidden) -->
+  <!-- hidden container for Google Translate engine -->
   <div id="google_translate_element2" style="display:none"></div>
+
+  <!-- init Google Translate -->
   <script>
-    function googleTranslateElementInit2(){
+    function googleTranslateElementInit2() {
       new google.translate.TranslateElement({
         pageLanguage: 'en',
         includedLanguages: 'en,fr,es,de,nl,it,sv,el',
@@ -762,6 +764,8 @@
     }
   </script>
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
+</body>
+</html>
   
 </body>
 </html>
