--- a/public/test3.html
+++ b/public/test3.html
@@ -15,15 +15,20 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <style>[x-cloak] { display: none !important; }</style>
 
-    <!-- 4) Google Translate setter -->
-    <script>
-      function setLanguage(langPair) {
-        if (!langPair) return;
-        const lang = langPair.split('|')[1];
-        document.cookie = 'googtrans=/en/' + lang + ';domain=' + location.hostname + ';path=/';
-        location.reload();
-      }
-    </script>
+<!-- 4) Google Translate setter -->
+<script>
+    function setLanguage(langPair) {
+      if (!langPair) return;
+      const lang = langPair.split('|')[1];
+      // cookie for exact host (e.g. www.exitmytimeshares.com)
+      document.cookie = 'googtrans=/en/' + lang + '; path=/';
+      // cookie for apex domain (any subdomain)
+      const apex = location.hostname.replace(/^www\./, '');
+      document.cookie = 'googtrans=/en/' + lang + '; domain=.' + apex + '; path=/';
+      // reload so the translator picks up the new cookie
+      location.reload();
+    }
+  </script>
 
     <!-- 5) Global CSS overrides -->
     <style>
