--- a/public/test3.html
+++ b/public/test3.html
@@ -140,17 +140,18 @@
           });
         </script>
 
-<!-- Google Translate hidden engine (bottom of page) -->
-<script type="text/javascript">
-  function doGTranslate(lang_pair) {
-    if (!lang_pair) return;
-    var lang = lang_pair.split('|')[1];
-    var select = document.querySelector('select.goog-te-combo');
-    if (select && select.options) {
+  <!-- helper that flips the hidden Google “select.goog-te-combo” -->
+  <script>
+    function doGTranslate(lang_pair) {
+      if (!lang_pair) return;
+      const lang = lang_pair.split('|')[1];
+      const select = document.querySelector('select.goog-te-combo');
+      if (!select) return;
       select.value = lang;
       select.dispatchEvent(new Event('change'));
     }
-  }
+  </script>
+
   <!-- jsPDF library (only need this once) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
@@ -158,7 +159,7 @@
   <div id="google_translate_element2" style="display:none"></div>
 
   <!-- init Google Translate -->
-  <script type="text/javascript">
+  <script>
     function googleTranslateElementInit2() {
       new google.translate.TranslateElement({
         pageLanguage: 'en',
