--- a/public/test3.html
+++ b/public/test3.html
@@ -15,17 +15,14 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <style>[x-cloak] { display: none !important; }</style>
 
-<!-- 4) Google Translate setter (no reload, directly flips the combo) -->
+<!-- 4) Google Translate setter (no reload, flips the combo) -->
 <script>
     function setLanguage(langPair) {
       if (!langPair) return;
       const [from, to] = langPair.split('|');
-      // update the cookie so the widget remembers
       document.cookie = `googtrans=/${from}/${to};path=/;domain=${location.hostname}`;
-      // find the hidden <select class="goog-te-combo">
       const combo = document.querySelector('select.goog-te-combo');
       if (!combo) return;
-      // change its value and fire the change event
       combo.value = to;
       combo.dispatchEvent(new Event('change'));
     }
@@ -149,21 +146,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
   <!-- hidden container for Google Translate engine -->
-  <div id="google_translate_element2" style="display:none"></div>
+  <div id="google_translate_element" style="display:none"></div>
 
   <!-- init Google Translate -->
   <script>
-    function googleTranslateElementInit2() {
+    function googleTranslateElementInit() {
       new google.translate.TranslateElement({
         pageLanguage: 'en',
         includedLanguages: 'en,fr,es,de,nl,it,sv,el',
         layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
         autoDisplay: false
-      }, 'google_translate_element2');
+      }, 'google_translate_element');
     }
   </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
-
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
 
@@ -741,21 +737,5 @@
       select.dispatchEvent(new Event('change'));
     }
   </script>
-  
-  <!-- hidden container for Google Translate engine -->
-  <div id="google_translate_element2" style="display:none"></div>
-
-  <!-- init Google Translate -->
-  <script>
-    function googleTranslateElementInit2() {
-      new google.translate.TranslateElement({
-        pageLanguage: 'en',
-        includedLanguages: 'en,fr,es,de,nl,it,sv,el',
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-        autoDisplay: false
-      }, 'google_translate_element2');
-    }
-  </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
 </body>
 </html>
